Using new 'phase' parameter for timer.js class.  Now when the 'elapsed' message is printed we can tell what event just occurred.  I added this originally because there were seemingling duplicate messages appearing in the logs. That was due to the final 'data' and 'end' events on the http request occuring almost simultaneously.

--- a/README
+++ b/README
@@ -8,6 +8,7 @@ See simple-node.js for a practical  example implementation of the libraries.
 
 To Do:
 -----
+* Update for Node. 0.4.1
 * Add more winston logging
   - use file and console transport simultaneously
 * Make installable via npm
