--- a/README
+++ b/README
@@ -2,9 +2,9 @@ iTunes: an implementation of the iTunes API in Node.js.
 
 Authored by Garrett Wilkin (http://geethink.com/blog)
 
-It uses both the iTunes API for retrieving media information and the LinkShare API for generating affiliate links to the iTunes store.
+It uses both the iTunes API for retrieving media information and the LinkShare API for generating affiliate links to the iTunes store. See an example in simple-node.js.
 
-Currently, the iTunes API is implemented and tested for searching for album information.  See an example in simple-node.js.  A callback function is required for using this package.  The basic steps to using it are:
+Currently, the iTunes API is implemented and tested for searching for album information.  See an example in simple-node.js.  A callback function is required in order to use this package.  The basic steps to using it are:
 
 1. Decide that you want to retrieve some media meta data (only albums supported currently)
 2. Write a function to process this meta data (display it, store it in a database etc.)
